# pre-commit-hooks-matlab

./: .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  commitHook.bat  commitHook.sh  matlab_autoindent.m  setup.cfg
pre_commit_hooks_matlab/: closeSubSystems.m  close_simulink_subsystems.m  close_simulink_subsystems.py  commitHook.bat  commitHook.sh  matlab.py  matlab_justify.m  matlab_justify.py  matlab_smart_indent.m  matlab_smart_indent.py  simulink_close_subsystems.m  simulink_close_subsystems.py  simulink_zoom_subsystems.m  simulink_zoom_subsystems.py
