[metadata]
name = pre_commit_hooks_matlab
version = 0.0.1
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dapperfu/pre-commit-hooks-matlab/
author = Frey, Jed
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
# Follows pre-commit minimums
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    close_simulink_subsystems = pre_commit_hooks_matlab.close_simulink_subsystems:main

[bdist_wheel]
universal = True